force-app/main/default/objects/Placement_History__c/Placement_History__c.object-meta.xml
<CustomObject>
    <label>Placement History</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Placement History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>