force-app/main/default/objects/Placement_History__c/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <formula>Placement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency ID</label>
    <type>Text</type>
</CustomField>