force-app/main/default/objects/Placement_History__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <formula>Placement__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>