force-app/main/default/objects/Placement_History__c/fields/Allocated_Balance__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Balance__c</fullName>
    <description>Total balance on the account at the time of placement</description>
    <inlineHelpText>Total balance on the account at the time of placement</inlineHelpText>
    <label>Allocated Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>