force-app/main/default/objects/Placement_History__c/fields/Current_Bal_General_Fees__c.field-meta.xml
<CustomField>
    <fullName>Current_Bal_General_Fees__c</fullName>
    <label>Current Bal General Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>