force-app/main/default/objects/Placement_History__c/fields/Current_Interest_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Balance__c</fullName>
    <label>Current Interest Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>