force-app/main/default/objects/Placement_History__c/fields/Current_Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Principal_Balance__c</fullName>
    <label>Current Principal Balance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>