force-app/main/default/objects/Placement_History__c/fields/Current_Total_Bal_at_time_of_Recall__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_Bal_at_time_of_Recall__c</fullName>
    <label>Current Total Bal at time of Recall</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>