force-app/main/default/objects/Placement_History__c/fields/ExportId__c.field-meta.xml
<CustomField>
    <fullName>ExportId__c</fullName>
    <formula>VALUE(IndexId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExportId</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>