force-app/main/default/objects/Placement_History__c/fields/IndexId__c.field-meta.xml
<CustomField>
    <fullName>IndexId__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>IndexId</label>
    <type>AutoNumber</type>
</CustomField>