force-app/main/default/objects/Placement_History__c/fields/Is_Allocated_Balance_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_Allocated_Balance_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allocated Balance Blank</label>
    <type>Checkbox</type>
</CustomField>