force-app/main/default/objects/Placement_History__c/fields/Non_recoverable_fee_balance__c.field-meta.xml
<CustomField>
    <fullName>Non_recoverable_fee_balance__c</fullName>
    <description>Non recoverable fee balance</description>
    <inlineHelpText>Non recoverable fee balance</inlineHelpText>
    <label>Non recoverable fee balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>