force-app/main/default/objects/Placement_History__c/fields/Placed_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Placed_Commission_Rate__c</fullName>
    <description>Placed Commission Rate</description>
    <inlineHelpText>Placed Commission Rate</inlineHelpText>
    <label>Placed Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>