force-app/main/default/objects/Placement_History__c/fields/Placed_Settlement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Placed_Settlement_Rate__c</fullName>
    <description>Placed Settlement Rate</description>
    <inlineHelpText>Placed Settlement Rate</inlineHelpText>
    <label>Placed Settlement Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>