force-app/main/default/objects/Placement_History__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement History</relationshipLabel>
    <relationshipName>Placement_History_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>