force-app/main/default/objects/Placement_History__c/fields/Placement_History_External__c.field-meta.xml
<CustomField>
    <fullName>Placement_History_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Placement History</label>
    <length>20</length>
    <type>Text</type>
</CustomField>