force-app/main/default/objects/Placement_History__c/fields/Placement_History_Temp__c.field-meta.xml
<CustomField>
    <fullName>Placement_History_Temp__c</fullName>
    <formula>VALUE(Placement_History_External__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement History Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>