force-app/main/default/objects/Placement_History__c/fields/Placement_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Placement_ID_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement ID Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>