force-app/main/default/objects/Placement_History__c/fields/Placement_Recall_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_Recall_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement Recall Date</label>
    <type>Date</type>
</CustomField>