force-app/main/default/objects/Placement_History__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>