force-app/main/default/objects/Placement_History__c/fields/Placement_Status_at_time_of_recall__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status_at_time_of_recall__c</fullName>
    <description>Placement Status at time of recall</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Status at time of recall</inlineHelpText>
    <label>Placement Status at time of recall</label>
    <length>100</length>
    <type>Text</type>
</CustomField>