force-app/main/default/objects/Placement_History__c/fields/Placement_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement Status Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>