force-app/main/default/objects/Placement_History__c/fields/Pool_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pool_Commission_Rate__c</fullName>
    <label>Pool Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>