force-app/main/default/objects/Placement_History__c/fields/Pool_ID__c.field-meta.xml
<CustomField>
    <fullName>Pool_ID__c</fullName>
    <description>Pool Id at the time of Placement History creation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pool Id at the time of Placement History creation</inlineHelpText>
    <label>Pool ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>