force-app/main/default/objects/Placement_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Placement History</relationshipLabel>
    <relationshipName>Placement_History</relationshipName>
    <type>Lookup</type>
</CustomField>