force-app/main/default/objects/Placement_History__c/fields/Product_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Commission_Rate__c</fullName>
    <label>Product Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>