force-app/main/default/objects/Placement_History__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <description>Product_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product_Identifier</inlineHelpText>
    <label>Product_Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>