force-app/main/default/objects/Placement_History__c/fields/Recall_Notify_Date__c.field-meta.xml
<CustomField>
    <fullName>Recall_Notify_Date__c</fullName>
    <description>The date that an agency was notified of a recall on an account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that an agency was notified of a recall on an account.</inlineHelpText>
    <label>Recall Notify Date</label>
    <type>Date</type>
</CustomField>