force-app/main/default/objects/Placement_History__c/fields/Recoverable_fee_balance__c.field-meta.xml
<CustomField>
    <fullName>Recoverable_fee_balance__c</fullName>
    <description>Recoverable fee balance</description>
    <inlineHelpText>Recoverable fee balance</inlineHelpText>
    <label>Recoverable fee balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>