force-app/main/default/objects/Placement_History__c/fields/Total_Balance_at_Placement__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_at_Placement__c</fullName>
    <description>Total Balance at Placement</description>
    <inlineHelpText>Total Balance at Placement</inlineHelpText>
    <label>Total Balance at Placement</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>