force-app/main/default/objects/Placement_History__c/fields/Value_Tier_at_Placement__c.field-meta.xml
<CustomField>
    <fullName>Value_Tier_at_Placement__c</fullName>
    <description>Value Tier at Placement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value Tier at Placement</inlineHelpText>
    <label>Value Tier at Placement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>